# stitch-cpp

./: LICENSE
src/: CMakeLists.txt  ParamsLog.cpp  ParamsLog.hpp  autolink.cpp  image_struct.cpp  image_struct.hpp  main.cpp  params_reader.cpp  params_reader.hpp  stitch_assemble.cpp  stitch_assemble.hpp  stitch_video.cpp  stitch_videos.cpp  test_autolink.cpp  test_params_reader.cpp  test_stitch_assemble.cpp  video_sync.cpp  video_sync.hpp
src/image_stitch/: CMakeLists.txt  image_struct.cpp  image_struct.hpp  stitch_compute.cpp  stitch_compute.hpp
